--- a/.gitignore
+++ b/.gitignore
@@ -300,6 +300,7 @@ __pycache__/
 /[Bb]uild/
 /[Bb]uilds/
 /Assets/AssetStoreTools*
+/Assets/Editor/GitHub/
 
 # Visual Studio 2015 cache directory
 /.vs/
